Updated to show how to make a plugin on the newer version of MangoBot...
Also uses module-info.java now!